[tool.poetry]
name = "poetry-problem"
version = "0.1.0"
description = ""
authors = ["Christian Franke <nobody@nowhere.ws>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
watchdog = "0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
